--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,8 +11,7 @@
         "default_popup": "index.html"
     },
     "host_permissions": [
-        "http://*/*",
-        "https://*/*"
+        "<all_urls>"
     ],
     "icons": {
         "32": "icon.png"
